# probeInterfaceG2

./: .gitmodules  LICENSE-1455J1201.stp.txt  README.md
firmware/: CMakeLists.txt  load.sh  main.cpp  pio_spi.cpp  pio_spi.hpp  spi_loopback.c
fw/: CMakeLists.txt  load.sh  main.cpp  pio_spi.cpp  pio_spi.hpp  pio_spi.pio
fw/usb/: tusb_config.h  usb_descriptors.c  usbtmc_app.c  usbtmc_app.h
pcb/: .gitignore  HE3621A0500.kicad_sym  board.kicad_sch  driver.kicad_sch  fp-lib-table  io.kicad_sch  probeInterfaceG2.kicad_pcb  probeInterfaceG2.kicad_pro  probeInterfaceG2.kicad_sch  sym-lib-table
pcbLib/: dcdcConverter.kicad_sym  levelShifter.bak  levelShifter.kicad_sym
pcbLib/case.pretty/: .gitignore  1455J1201.kicad_mod  get_3D_model.sh
pcbLib/levelShifter.pretty/: XQFN16.kicad_mod
pcbSimple/: .gitignore  fp-info-cache  fp-lib-table  probeInterfaceG2.kicad_pcb  probeInterfaceG2.kicad_prl  probeInterfaceG2.kicad_pro  probeInterfaceG2.kicad_sch  sym-lib-table
pcbSimple/levelShifter.pretty/: XQFN16.kicad_mod
py/: test.py  test_L3G4200.py  test_pylabte.ipynb  test_spi.py  usbtmc_test_orig.py
